; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_item.c_GuessType.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_item.c_GuessType.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.item_type_entry = type { i8*, i32, i32, i32, i32, i32 }
%struct.TYPE_3__ = type { i32 }

@GuessType.tab = internal constant [60 x %struct.item_type_entry] [%struct.item_type_entry { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i32 0, i32 0), i32 132, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i32 0, i32 0), i32 132, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.4, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.5, i32 0, i32 0), i32 132, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.6, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.7, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.8, i32 0, i32 0), i32 129, i32 1, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.9, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.10, i32 0, i32 0), i32 133, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.11, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.12, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.13, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.14, i32 0, i32 0), i32 132, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.15, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.16, i32 0, i32 0), i32 128, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.17, i32 0, i32 0), i32 131, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.18, i32 0, i32 0), i32 131, i32 1, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.19, i32 0, i32 0), i32 131, i32 1, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.20, i32 0, i32 0), i32 129, i32 1, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.21, i32 0, i32 0), i32 128, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.22, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.23, i32 0, i32 0), i32 130, i32 1, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.24, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.25, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.26, i32 0, i32 0), i32 129, i32 1, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.27, i32 0, i32 0), i32 129, i32 1, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.28, i32 0, i32 0), i32 132, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.29, i32 0, i32 0), i32 131, i32 1, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.30, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.31, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.32, i32 0, i32 0), i32 129, i32 1, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.33, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.34, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.35, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.36, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.37, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.38, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.39, i32 0, i32 0), i32 129, i32 1, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.40, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.41, i32 0, i32 0), i32 129, i32 1, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.42, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.43, i32 0, i32 0), i32 129, i32 1, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.44, i32 0, i32 0), i32 131, i32 1, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.45, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.46, i32 0, i32 0), i32 131, i32 1, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.47, i32 0, i32 0), i32 129, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.48, i32 0, i32 0), i32 132, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.49, i32 0, i32 0), i32 129, i32 1, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.50, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.51, i32 0, i32 0), i32 129, i32 1, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.52, i32 0, i32 0), i32 129, i32 1, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.53, i32 0, i32 0), i32 131, i32 1, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.54, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.55, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.56, i32 0, i32 0), i32 132, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.57, i32 0, i32 0), i32 129, i32 1, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.58, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }, %struct.item_type_entry { i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.59, i32 0, i32 0), i32 134, i32 0, i32 0, i32 0, i32 0 }], align 16
@.str = private unnamed_addr constant [5 x i8] c"alsa\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"atsc\00", align 1
@.str.2 = private unnamed_addr constant [3 x i8] c"bd\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"bluray\00", align 1
@.str.4 = private unnamed_addr constant [6 x i8] c"cable\00", align 1
@.str.5 = private unnamed_addr constant [5 x i8] c"cdda\00", align 1
@.str.6 = private unnamed_addr constant [5 x i8] c"cqam\00", align 1
@.str.7 = private unnamed_addr constant [7 x i8] c"dc1394\00", align 1
@.str.8 = private unnamed_addr constant [5 x i8] c"dccp\00", align 1
@.str.9 = private unnamed_addr constant [7 x i8] c"deckli\00", align 1
@.str.10 = private unnamed_addr constant [4 x i8] c"dir\00", align 1
@.str.11 = private unnamed_addr constant [6 x i8] c"dshow\00", align 1
@.str.12 = private unnamed_addr constant [4 x i8] c"dtv\00", align 1
@.str.13 = private unnamed_addr constant [4 x i8] c"dvb\00", align 1
@.str.14 = private unnamed_addr constant [4 x i8] c"dvd\00", align 1
@.str.15 = private unnamed_addr constant [6 x i8] c"eyetv\00", align 1
@.str.16 = private unnamed_addr constant [3 x i8] c"fd\00", align 1
@.str.17 = private unnamed_addr constant [5 x i8] c"file\00", align 1
@.str.18 = private unnamed_addr constant [4 x i8] c"ftp\00", align 1
@.str.19 = private unnamed_addr constant [5 x i8] c"http\00", align 1
@.str.20 = private unnamed_addr constant [5 x i8] c"icyx\00", align 1
@.str.21 = private unnamed_addr constant [5 x i8] c"imem\00", align 1
@.str.22 = private unnamed_addr constant [6 x i8] c"isdb-\00", align 1
@.str.23 = private unnamed_addr constant [5 x i8] c"itpc\00", align 1
@.str.24 = private unnamed_addr constant [5 x i8] c"jack\00", align 1
@.str.25 = private unnamed_addr constant [7 x i8] c"linsys\00", align 1
@.str.26 = private unnamed_addr constant [5 x i8] c"live\00", align 1
@.str.27 = private unnamed_addr constant [4 x i8] c"mms\00", align 1
@.str.28 = private unnamed_addr constant [4 x i8] c"mtp\00", align 1
@.str.29 = private unnamed_addr constant [4 x i8] c"nfs\00", align 1
@.str.30 = private unnamed_addr constant [5 x i8] c"ofdm\00", align 1
@.str.31 = private unnamed_addr constant [4 x i8] c"oss\00", align 1
@.str.32 = private unnamed_addr constant [4 x i8] c"pnm\00", align 1
@.str.33 = private unnamed_addr constant [6 x i8] c"pulse\00", align 1
@.str.34 = private unnamed_addr constant [4 x i8] c"qam\00", align 1
@.str.35 = private unnamed_addr constant [5 x i8] c"qpsk\00", align 1
@.str.36 = private unnamed_addr constant [7 x i8] c"qtcapt\00", align 1
@.str.37 = private unnamed_addr constant [8 x i8] c"qtsound\00", align 1
@.str.38 = private unnamed_addr constant [7 x i8] c"raw139\00", align 1
@.str.39 = private unnamed_addr constant [3 x i8] c"rt\00", align 1
@.str.40 = private unnamed_addr constant [7 x i8] c"satell\00", align 1
@.str.41 = private unnamed_addr constant [6 x i8] c"satip\00", align 1
@.str.42 = private unnamed_addr constant [7 x i8] c"screen\00", align 1
@.str.43 = private unnamed_addr constant [4 x i8] c"sdp\00", align 1
@.str.44 = private unnamed_addr constant [5 x i8] c"sftp\00", align 1
@.str.45 = private unnamed_addr constant [4 x i8] c"shm\00", align 1
@.str.46 = private unnamed_addr constant [4 x i8] c"smb\00", align 1
@.str.47 = private unnamed_addr constant [7 x i8] c"stream\00", align 1
@.str.48 = private unnamed_addr constant [5 x i8] c"svcd\00", align 1
@.str.49 = private unnamed_addr constant [4 x i8] c"tcp\00", align 1
@.str.50 = private unnamed_addr constant [7 x i8] c"terres\00", align 1
@.str.51 = private unnamed_addr constant [4 x i8] c"udp\00", align 1
@.str.52 = private unnamed_addr constant [5 x i8] c"unsv\00", align 1
@.str.53 = private unnamed_addr constant [5 x i8] c"upnp\00", align 1
@.str.54 = private unnamed_addr constant [7 x i8] c"usdigi\00", align 1
@.str.55 = private unnamed_addr constant [4 x i8] c"v4l\00", align 1
@.str.56 = private unnamed_addr constant [4 x i8] c"vcd\00", align 1
@.str.57 = private unnamed_addr constant [4 x i8] c"vdr\00", align 1
@.str.58 = private unnamed_addr constant [7 x i8] c"wasapi\00", align 1
@.str.59 = private unnamed_addr constant [7 x i8] c"window\00", align 1
@.str.60 = private unnamed_addr constant [4 x i8] c"://\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32*)* @GuessType to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @GuessType(%struct.TYPE_3__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.item_type_entry*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 1, i64* %6, align 8
  br label %8

8:                                                ; preds = %24, %2
  %9 = load i64, i64* %6, align 8
  %10 = call i64 @ARRAY_SIZE(%struct.item_type_entry* getelementptr inbounds ([60 x %struct.item_type_entry], [60 x %struct.item_type_entry]* @GuessType.tab, i64 0, i64 0))
  %11 = icmp ult i64 %9, %10
  br i1 %11, label %12, label %27

12:                                               ; preds = %8
  %13 = load i64, i64* %6, align 8
  %14 = getelementptr inbounds %struct.item_type_entry, %struct.item_type_entry* getelementptr inbounds ([60 x %struct.item_type_entry], [60 x %struct.item_type_entry]* @GuessType.tab, i64 0, i64 0), i64 %13
  %15 = getelementptr inbounds %struct.item_type_entry, %struct.item_type_entry* %14, i32 0, i32 5
  %16 = load i32, i32* %15, align 8
  %17 = load i64, i64* %6, align 8
  %18 = getelementptr inbounds %struct.item_type_entry, %struct.item_type_entry* getelementptr inbounds ([60 x %struct.item_type_entry], [60 x %struct.item_type_entry]* @GuessType.tab, i64 0, i64 0), i64 %17
  %19 = getelementptr inbounds %struct.item_type_entry, %struct.item_type_entry* %18, i64 -1
  %20 = call i64 @typecmp(i32 %16, %struct.item_type_entry* %19)
  %21 = icmp sgt i64 %20, 0
  %22 = zext i1 %21 to i32
  %23 = call i32 @assert(i32 %22)
  br label %24

24:                                               ; preds = %12
  %25 = load i64, i64* %6, align 8
  %26 = add i64 %25, 1
  store i64 %26, i64* %6, align 8
  br label %8

27:                                               ; preds = %8
  %28 = load i32*, i32** %5, align 8
  store i32 0, i32* %28, align 4
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i32* @strstr(i32 %31, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.60, i64 0, i64 0))
  %33 = icmp eq i32* %32, null
  br i1 %33, label %34, label %35

34:                                               ; preds = %27
  store i32 128, i32* %3, align 4
  br label %52

35:                                               ; preds = %27
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = call i64 @ARRAY_SIZE(%struct.item_type_entry* getelementptr inbounds ([60 x %struct.item_type_entry], [60 x %struct.item_type_entry]* @GuessType.tab, i64 0, i64 0))
  %40 = call %struct.item_type_entry* @bsearch(i32 %38, %struct.item_type_entry* getelementptr inbounds ([60 x %struct.item_type_entry], [60 x %struct.item_type_entry]* @GuessType.tab, i64 0, i64 0), i64 %39, i32 32, i64 (i32, %struct.item_type_entry*)* @typecmp)
  store %struct.item_type_entry* %40, %struct.item_type_entry** %7, align 8
  %41 = load %struct.item_type_entry*, %struct.item_type_entry** %7, align 8
  %42 = icmp eq %struct.item_type_entry* %41, null
  br i1 %42, label %43, label %44

43:                                               ; preds = %35
  store i32 128, i32* %3, align 4
  br label %52

44:                                               ; preds = %35
  %45 = load %struct.item_type_entry*, %struct.item_type_entry** %7, align 8
  %46 = getelementptr inbounds %struct.item_type_entry, %struct.item_type_entry* %45, i32 0, i32 3
  %47 = load i32, i32* %46, align 8
  %48 = load i32*, i32** %5, align 8
  store i32 %47, i32* %48, align 4
  %49 = load %struct.item_type_entry*, %struct.item_type_entry** %7, align 8
  %50 = getelementptr inbounds %struct.item_type_entry, %struct.item_type_entry* %49, i32 0, i32 4
  %51 = load i32, i32* %50, align 4
  store i32 %51, i32* %3, align 4
  br label %52

52:                                               ; preds = %44, %43, %34
  %53 = load i32, i32* %3, align 4
  ret i32 %53
}

declare dso_local i64 @ARRAY_SIZE(%struct.item_type_entry*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @typecmp(i32, %struct.item_type_entry*) #1

declare dso_local i32* @strstr(i32, i8*) #1

declare dso_local %struct.item_type_entry* @bsearch(i32, %struct.item_type_entry*, i64, i32, i64 (i32, %struct.item_type_entry*)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
